--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         />
       </svg>
 
-      <ul class="flex gap-5 text-gray-600 md:flex sm:hidden">
+      <ul class="flex gap-5 text-gray-600 hidden md:flex">
         <li class="hover:underline hover:text-black">
           <a href="./index.html">Home</a>
         </li>
