--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
       class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10"
     >
       <h1 class="text-2xl">Greenden</h1>
+      <div>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -33,17 +34,18 @@
         />
       </svg>
 
-      <ul class="flex gap-5 text-gray-600 hidden md:flex">
-        <li class="hover:underline hover:text-black">
+      <ul class="flex gap-5 text-gray-600 md:flex">
+        <li class="hover:underline hover:text-black hidden md:flex">
           <a href="./index.html">Home</a>
         </li>
-        <li class="hover:underline hover:text-black">
+        <li class="hover:underline hover:text-black hidden md:flex">
           <a href="./product.html">Product</a>
         </li>
-        <li class="hover:underline hover:text-black">
+        <li class="hover:underline hover:text-black hidden md:flex">
           <a href="./contact.html">Contact</a>
         </li>
       </ul>
+      </div>
     </nav>
     <!--Contact-->
     <div class="px-6 py-24 sm:py-32 lg:px-8">
